welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:25: error: Int.type does not take parameters
def restor(j:Int,decale:Int,tailleY:Int)=Int{
                                            ^